--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -4,9 +4,18 @@
   tasks:
 
     - name: disable old nodejs and enable nodejs18
-      ansible.builtin.command: dnf module disable nodejs -y ; dnf module enable nodejs:18 -y
+      ansible.builtin.shell: dnf module disable nodejs -y ; dnf module enable nodejs:18 -y
 
     - name: install nodejs
       ansible.builtin.dnf:
         name: nodejs 
         state: present  
+
+    - name: create roboshop user
+      ansible.builtin.user:
+        name: roboshop
+
+    - name: Create app directory
+      ansible.builtin.file:
+        path: /app
+        state: directory    
