--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -19,3 +19,14 @@
       ansible.builtin.file:
         path: /app
         state: directory    
+
+    - name: Download catalogue application 
+      ansible.builtin.get_url:
+        url: https://roboshop-builds.s3.amazonaws.com/catalogue.zip
+        dest: /tmp
+
+    - name: Extract catalogue application
+      ansible.builtin.unarchive:
+        src: /tmp/catalogue.zip
+        dest: /app
+        remote_src: yes    
