--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -55,4 +55,12 @@
     - name: Install mongodb client
       ansible.builtin.package:
         name: mongodb-org-shell
-        state: present            
+        state: present      
+
+    - name: get the catagories count
+      ansible.builtin.command:  mongo --host mongodb.jaiaws446.online --quiet --eval 'db = db.getSiblingDB("catalogue"); db.products.count()' 
+      register: product_count
+
+    - name: print the count
+      ansible.builtin.debug:
+        msg: "product count: {{product_count}}"            
