--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -67,4 +67,10 @@
 
     - name: load catalogue data
       ansible.builtin.command: mongo --host mongodb.jaiaws446.online < /app/schema/catalogue.js       
-      when: product_count.stdout == 0         
+      when: product_count.stdout == 0  
+
+    - name: start and enable catalogue
+      ansible.builtin.service:
+        name: catalogue
+        state: restarted
+        enabled: yes          
