--- a/inventory.ini
+++ b/inventory.ini
@@ -10,3 +10,7 @@ cart.jaiaws446.online
 web.jaiaws446.online
 [redis]
 redis.jaiaws446.online
+[mysql]
+mysql.jaiaws446.online
+[shipping]
+shipping.jaiaws446.online
