--- a/shipping.yaml
+++ b/shipping.yaml
@@ -65,5 +65,9 @@
 
   - name: print output
     ansible.builtin.debug:
-      msg: "schema output: {{schema}}"    
+      msg: "schema output: {{schema}}"  
+
+  - name: load cities data
+    ansible.builtin.command: mysql -h mysql.jaiaws446.online -uroot -pRoboShop@1 < /app/schema/shipping.sql
+    when: schema.stdout != "1"       
 
