--- a/inventory.ini
+++ b/inventory.ini
@@ -14,3 +14,7 @@ redis.jaiaws446.online
 mysql.jaiaws446.online
 [shipping]
 shipping.jaiaws446.online
+[rabbitmq]
+rabbitmq.jaiaws446.online
+[payment]
+payment.jaiaws446.online
